syntax = "proto3";

package api;

option go_package = "github.com/YOUR-GITHUB-USERNAME/type-safe-go-react/api";

enum JobType {
    encode = 0;
    decode = 1;
}

message SubmitJobRequest {
 JobType type = 1;
}

message SubmitJobResponse {
    string job_id = 1;
    JobType type = 2;
}

message JobStatusRequest {
    string job_id = 1;
}

message JobStatusResponse {
    string job_id = 1;
    string status = 2;
    int32 progress = 3;
}

service JobQueue {
    rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);
    rpc StreamJobStatus(JobStatusRequest) returns (stream JobStatusResponse);
}